fix background position on small screen size

--- a/index.css
+++ b/index.css
@@ -473,6 +473,7 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-around;
+        background-position: 50% 0;
     }
     #hero-content-container {
         width: 95%;
